# windows32

./: README.md
download/: readme.md
fimeware/hmi-board-win32/: .config  .config.old  .cproject  .project  .sconsign.dblite  JLinkLog.txt  JLinkSettings.ini  README.md  README_ZH.md  SConstruct  envsetup.sh  makefile.targets  project.uvguix.RTT  project.uvguix.rb  project.uvoptx  project.uvprojx  rtconfig.h  rtconfig.py  rtconfig_preinc.h  template.uvguix.RTT  template.uvguix.rb  template.uvoptx  template.uvprojx
fimeware/hmi-board-win32/board/lvgl/demo/win32/: CMakeLists.txt  SConscript  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
fimeware/hmi-board-win32/board/lvgl/demo/win32/components/: SConscript  ui_comp.c  ui_comp.h  ui_comp_button.c  ui_comp_button.h  ui_comp_button_pause2.c  ui_comp_button_pause2.h  ui_comp_buttonround1.c  ui_comp_buttonround1.h  ui_comp_dot.c  ui_comp_dot.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_settingbtn.c  ui_comp_settingbtn.h
fimeware/hmi-board-win32/board/lvgl/demo/win32/fonts/: ui_font_Mona_Sans.c
fimeware/hmi-board-win32/board/lvgl/demo/win32/images/: SConscript  ui_img_album1_png.c  ui_img_album2_png.c  ui_img_amplify_png.c  ui_img_battary_png.c  ui_img_bg1_png.c  ui_img_bg1_small_png.c  ui_img_bg2_png.c  ui_img_bg2_small_png.c  ui_img_ble_png.c  ui_img_btn1_png.c  ui_img_btn1_press_png.c  ui_img_btn_print_down_png.c  ui_img_btn_print_top_off_png.c  ui_img_clash_png.c  ui_img_close_png.c  ui_img_company_png.c  ui_img_desktop_png.c  ui_img_disk_png.c  ui_img_disk_storge_png.c  ui_img_display_png.c  ui_img_download_png.c  ui_img_edge_png.c  ui_img_file_25x25_png.c  ui_img_file_png.c  ui_img_fixation_png.c  ui_img_forder_png.c  ui_img_head_png.c  ui_img_hide_png.c  ui_img_humi_png.c  ui_img_info_png.c  ui_img_knob_png.c  ui_img_like_png.c  ui_img_line_png.c  ui_img_link_png.c  ui_img_music_png.c  ui_img_network_png.c  ui_img_next_png.c  ui_img_no_conn_png.c  ui_img_no_signal_png.c  (+56 more)
fimeware/hmi-board-win32/board/lvgl/demo/win32/screens/: ui_main.c  ui_mqtt_Setting.c  ui_setting_param.c  ui_setup.c  utils.c  utils.h
(+23 files in other folders)
