SET(SOURCES components/ui_comp_button.c
    components/ui_comp_dot.c
    components/ui_comp_settingbtn.c
    components/ui_comp.c
    screens/ui_setup.c
    screens/ui_mqtt_Setting.c
    screens/ui_setting_param.c
    screens/ui_main.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    images/ui_img_ok_small_png.c
    images/ui_img_no_signal_png.c
    images/ui_img_ok_big_png.c
    images/ui_img_btn1_png.c
    images/ui_img_btn1_press_png.c
    images/ui_img_roller_bg_png.c
    images/ui_img_btn_print_down_png.c
    images/ui_img_btn_print_top_off_png.c
    images/ui_img_sure_png.c
    images/ui_img_bg1_png.c
    images/ui_img_win_png.c
    images/ui_img_wifi_15_png.c
    images/ui_img_voice_png.c
    images/ui_img_temp_png.c
    images/ui_img_humi_png.c
    images/ui_img_display_png.c
    images/ui_img_pc_png.c
    images/ui_img_network_png.c
    images/ui_img_info_png.c
    images/ui_img_right_png.c
    images/ui_img_disk_png.c
    images/ui_img_disk_storge_png.c
    images/ui_img_forder_png.c
    images/ui_img_fixation_png.c
    images/ui_img_desktop_png.c
    images/ui_img_photo_icon_png.c
    images/ui_img_close_png.c
    images/ui_img_scale_png.c
    images/ui_img_hide_png.c
    images/ui_img_head_png.c
    images/ui_img_wifi_13_png.c
    images/ui_img_ble_png.c
    images/ui_img_battary_png.c
    images/ui_img_plane_png.c
    images/ui_img_knob_png.c
    images/ui_img_sun_png.c
    images/ui_img_speaker_png.c
    images/ui_img_search_png.c
    images/ui_img_setting_png.c
    images/ui_img_file_png.c
    images/ui_img_pc_big_png.c
    images/ui_img_slider_bg_mario_png.c
    images/ui_img_suppermario_png.c
    images/ui_img_amplify_png.c
    images/ui_img_clash_png.c
    images/ui_img_file_25x25_png.c
    images/ui_img_line_png.c
    images/ui_img_link_png.c
    images/ui_img_position_png.c
    images/ui_img_talk_png.c
    images/ui_img_wifi_png.c
    images/ui_img_wifi_connect_png.c)

add_library(ui ${SOURCES})
